# mcp-probe

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs  build_support.rs  deny.toml
.github/: dependabot.yml
.github/codeql/: codeql-rust.yml
.github/codeql/actions-workflow-security/: LogExposure.qll  WorkflowSecurity.qll
.github/workflows/: build-binary.yml  ci.yml  code-coverage.yml  codeql-query-tests.yml  codeql.yml  dependency-governance.yml  devskim.yml  osv-scanner.yml  scorecard.yml
docs/: dependency-governance.md  docstring-policy.md  registry-name-review.md
docs/design/: modularisation-and-boundaries.md
scripts/: dependency_governance_check.sh
src/: admission.rs  allowlist.rs  auth.rs  cli.rs  guidance.rs  help_text.rs  http.rs  lib.rs  logging.rs  main.rs  provenance.rs  replay.rs  report.rs  trace.rs  transport.rs  version.rs
src/probe/: auth_diagnostics.rs  auth_discovery.rs  catalog_contract.rs  catalog_profile.rs  connect.rs  errors.rs  mod.rs  options.rs  schema_compat.rs
src/scenario/: allowlist.rs  auth.rs  compare.rs  mod.rs  options.rs  runner.rs  snapshots.rs  timing.rs  types.rs  validation.rs
src/server/: mod.rs  resources.rs  tools.rs
src/server/tools/: core.rs  http.rs  raw.rs  script.rs
tests/: build_support.rs
